@@ -46,7 +46,7 @@ module Gem
 
     attr_accessor :original_platform # :nodoc:
 
-    # ------------------------- Specification version contstants.
+    # ------------------------- Specification version constants.
 
     ##
     # The the version number of a specification that does not specify one
